exabyte_theme/extra.css
*, *:active, *:hover {
    outline: none !important;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
}

*, button, input, i, a {
    -webkit-font-smoothing: antialiased;
}

body {
    line-height: 1.42857143;
    color: #5e5e5e;
    font-weight: 300;
    background-attachment: fixed;
    background-color: #f8f8f8;
}

.section {
    text-align: justify;
}

/* adjust margins for nested lists */
.section>ul>li>ul>li:last-child {
    margin-bottom: 20px;
}

a:visited {
    color: #999;
}

img {
    margin-bottom: 20px;
    vertical-align: middle;
    width: 100%;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.31);
    border-radius: 5px;
    border: 1px solid #AAA;
    padding: 2px;
    /*max-width: 600px;*/
}

/* --------------------------------------------------------- *
 *                  Paragraph/list
 * --------------------------------------------------------- */
p + h1, p + h2, p + h3, p + h4,
pre + h1, pre + h2, pre + h3, pre + h4,
ul + h1, ul + h2, ul + h3, ul + h4,
ol + h1, ol + h2, ol + h3, ol + h4 {
    margin: 30px 0 10px 0;
}
p, :not(footer.p) {
    line-height: 24px;
}
li > p {
    margin: 0;
    line-height: 18px;
}
.card-body ul {
    margin: 15px 0 15px 0;
    line-height: 24px;
}

/* --------------------------------------------------------- *
 *                  Source code
 * --------------------------------------------------------- */
pre {
    background-color: #F9F9F9;
    overflow-x: auto;
}
pre code {
    overflow-wrap: normal;
    white-space: pre;
}
p + pre, ul + pre {
    margin-top: 10px;
}


.wy-side-nav-search,
.wy-side-nav-search img {
    background-color: transparent;
}

/* --------------------------------------------------------- *
 *                  LOGO AND SIDEBAR
 * --------------------------------------------------------- */
.wy-nav-side {
    background: #3677d9;
}

.rst-versions {
    /*border-top: 2px solid #CCC;*/
    background: #0A3677;
    border-top: 0px;
}

.rst-versions .rst-current-version {
    /*padding: 8px;*/
    background: #0A3677;
}

.wy-nav-top img,
.wy-side-nav-search img {
    display: inherit;
    margin: 0;
    height: inherit;
    width: inherit;
    background-color: none;
    padding: 0px;
    border-radius: 0;
    border:none;
    box-shadow: none;
}

.wy-side-nav-search {
    position: fixed;
    margin-bottom: 0;
    padding-top: 0px;
    width: inherit;
    background: #343131;
    /*border-bottom: 2px solid #CCC;*/
    background: #0A3677;
    width: 300px;
}

.wy-side-nav-search img {
    width: 200px;
}

.wy-side-scroll {
    width: 320px;
    position: relative;
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100%;
}

.wy-menu.wy-menu-vertical {
    margin-top: 104px;
}

@media screen and (max-width: 768px) {
    .wy-nav-side.shift {
        width:80%;
    }
}

@media screen and (max-width: 768px) {
    .wy-nav-content-wrap.shift {
        left: 80%;
    }
}

.wy-nav-content {
    padding: 1.618em 3.236em;
    height: 100%;
    max-width: 1280px;
    margin: auto;
}

.wy-nav-top img, .wy-side-nav-search a:hover, .wy-side-nav-search img:hover {
    background-color: none;
}

.wy-nav-top img, .wy-side-nav-search>a:hover {
    background: none;
}
.wy-nav-top img, .wy-side-nav-search>a {
    padding:0;
    margin:0;
}

/* search box input */
#rtd-search-form {
    padding-right: 15px;
    padding-left: 12px;
}

.wy-side-nav-search input[type=text] {
    border: none;
    /*padding: 10px 12px;*/
}

.wy-menu-vertical span {
    color: #fff;
    font-weight: 600;
}

/* --------------------------------------------------------- *
 *                  BURGER AND MENU SMALL SCREEN
 * --------------------------------------------------------- */
.wy-nav-top {
    /*background: #343131;*/
    background: #0A3677;
}

.wy-nav-top i {
    font-size: 24px;
    margin-top:15px;
    margin-left: 10px;
    margin-right: 0px;
}

.wy-nav-top img {
    display: inherit;
    width: 160px;
    margin-left: -20px;

}

/* --------------------------------------------------------- *
 *                  BLOCKQUOTE
 * --------------------------------------------------------- */
.rst-content blockquote {
    margin-left: 30px;
    border-left: 5px solid #EFEFF0;
    padding-left: 2em;
    width: 80%;
    margin-top: 20px;
    color: #999;
}

/* --------------------------------------------------------- *
 *                  NAV COLLAPSE
 * --------------------------------------------------------- */

.wy-menu ul.subnav {
    cursor: pointer;
}

.wy-menu ul.subnav > ul.subnav span {
    color: #aaa;
    padding-left: 1.3em;
}

.wy-menu ul.subnav > ul.subnav.active span {
    color: white;
    padding-left: 1.3em;
}

ul.subnav .fa {
    display: none;
}

ul.subnav > .subnav .fa {
    display:inline-block;
}

ul.subnav .subnav li.toctree-l1 {
    display: none;
}

ul.subnav .subnav.active {}

ul.subnav .subnav.active li.toctree-l1 {
    display: block;
}

/* Font awesome icon */
ul.subnav .fa {
    color: gray;
    margin: 0px 5px;
}

ul.subnav.active .fa {
    color: white;
    margin: 0px 5px;
}

/* --------------------------------------------------------- *
 *                  GENERIC CLASSES
 * --------------------------------------------------------- */
.text-muted {
    color: #5e5e5e;
}

